# DistributedSystem

./: README.md  build-and-run.sh  compose.yaml  docker-compose.yml  generate_protos.py  payment_pb2.py  readme.md
REST-Server-Client/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  nginx.conf
REST-Server-Client/include/: server.hpp
REST-Server-Client/include/handlers/: base.hpp  interface.hpp  orders.hpp  products.hpp  users.hpp
REST-Server-Client/include/models/: orders.hpp  products.hpp  users.hpp
REST-Server-Client/src/: main.cpp
REST-Server-Client/src/clients/: client_smoke.cpp  load_browse.sh  local_browse.sh  local_order.sh  smoke.sh
REST-Server-Client/src/server/: server.cpp
REST-Server-Client/src/server/handlers/: base.cpp  orders.cpp  products.cpp  users.cpp
admin_service/: dockerfile
api_gateway/: dockerfile
cart_service/: Dockerfile
client/: client.py
client_service/: dockerfile
ecommerce-order-system/: README.md  generate_protos.py
gateway_service/: Dockerfile
order_service/: dockerfile  order_pb2.py  order_server.py  product_pb2_grpc.py
payment_service/: Dockerfile  payment_server.py
product_service/: Dockerfile  product_pb2.py  product_server.py  requirements.txt
proto/: cart_service.proto  common.proto  ecommerce.proto  ecommerce_pb2.py  ecommerce_pb2.pyi  ecommerce_pb2_grpc.py  order_service.proto  product_service.proto  user_service.proto
protos/: create_shipping_test.html  create_test.html  get_order_test.html  order_status_test.html  order_update_test.html  product.proto  product_list_test.html  product_test.html  test.sh  update_test.html
shipping_service/: Dockerfile  shipping_server.py
(+50 files in other folders)
